[tool.poetry]
name = "hme-vas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.2.5"
notebook = "^7.1.3"
sympy = "^1.12"
streamlit-drawable-canvas = "^0.9.3"
streamlit = "^1.33.0"
ruff = "^0.4.4"
opencv-python-headless = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
